[package]
name = "ironhide_cli"
version = "0.1.0"
authors = ["Nick <trashemail430@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.7"
rpassword = "4.0"
console = "0.11.3"
rand = "0.7.3"
clipboard = "0.5"
chacha20poly1305="0.5.1"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]